Fix problem with z-index in which the dark mode animation didn't went over the navigation tab

--- a/src/app/components/settings-card/settings-card.component.scss
+++ b/src/app/components/settings-card/settings-card.component.scss
@@ -125,7 +125,6 @@
                     border-radius: 1000px;
                     outline: none;
                     cursor: pointer;
-                    z-index: 10010px !important;
                     transition: background-color 0.3s linear, width 0.3s ease, height 0.3s ease, font-size 0.3s ease;
                     
         
